<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicFinish"
        android:text="@string/button_finish_text" />

    <Button
        android:id="@+id/buttonBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicBrowser"
        android:text="@string/button_browser_text" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicCall"
        android:text="@string/button_call_text" />

    <Button
        android:id="@+id/buttonThirdActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicThirdActivity"
        android:text="@string/button_thirdactivity_text" />
</LinearLayout>